--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -7,12 +7,18 @@
         <variable
             name="viewModel"
             type="com.example.testapplication.ui.main.MainViewModel" />
+
+        <variable
+            name="direction"
+            type="com.example.testapplication.ui.main.MainFragmentDirections.Companion" />
+
+        <import type="androidx.navigation.Navigation" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/main"
         android:layout_width="match_parent"
-        android:layout_height="624dp"
+        android:layout_height="match_parent"
         tools:context=".ui.main.MainFragment">
 
         <TextView
@@ -63,6 +69,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/button" />
+
+        <Button
+            android:onClick="@{view -> Navigation.findNavController(view).navigate(direction.actionMainFragmentToDestFragment(viewModel.dataList.get(viewModel.dataList.size() - 1).number))}"
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="3dp"
+            android:text="Button"
+            app:layout_constraintStart_toEndOf="@+id/button2"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
